<resources>
    <string name="app_name">Quiz Pop</string>
    <string name="txtUserName">Enter the User Name</string>
    <string name="txtPassword">Enter the Password</string>
    <string name="btnSignup">Sign Up</string>
    <string name="btnLogin">Login</string>
    <string name="txtUserName2">Enter the User Name</string>
    <string name="txtPassword2">Enter the Password</string>
    <string name="txtRePassword">Retype-Password</string>
    <string name="txtEmail">Enter the Email ID</string>
    <string name="numPhone">Enter the Phone Number</string>
    <string name="btnSignup2">Sign me up!</string>
    <string name="txtUserName3">Enter the User Name</string>
    <string name="btnReturn">Return to Login Screen</string>
    <string name="txtText">Quiz Pop</string>
    <string name="user_page_text">User Page</string>
    <string name="admin_page_text">Admin Page</string>
    <string name="button1">Add Questions</string>
    <string name="button2">Take Quiz</string>
    <string name="button3">Number of Questions</string>
    <string name="txtQuestions">Enter the Question</string>
    <string name="txtOption1">Enter Option 1</string>
    <string name="txtOption2">Enter Option 2</string>
    <string name="txtOption3">Enter Option 3</string>
    <string name="txtOption4">Enter Option 4</string>
    <string name="btnUpload">Upload</string>
    <string name="txtAnswer">Enter the answer</string>
    <string name="btnTakeQuiz">Take Quiz</string>
    <string name="btnNQ">Number of Questions</string>
    <string name="btnReport">Report</string>
    <string name="AboutUs">About Us</string>
    <string name="SignOut">Sign Out</string>
    <string name="AboutUsTitle">Quiz Pop</string>
    <string name="AboutUsText">Quizpop is an application where you can test your knowledge against QuizPops database. This application is built for the people who are fanatic about quizzes. The user can answer some challenging questions. The admin will prepare the questions and add them to the database. The user is asked with some random questions from the database. Each question contains four multiple options. It is left to the user to select the number of questions to answer. There will be multiple rounds throughout the quiz. A report is made in every round using a bar graph. The user will also be able to see how a particular user stands against other users and see who is the ultimate Quizpopper. </string>
</resources>
