<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginStart="100dp"
        android:text="@string/button1"
        android:background="@android:color/holo_blue_light"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="100dp"
        android:text="@string/button2"
        android:background="@android:color/holo_blue_light"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button3"
        android:background="@android:color/holo_blue_light"/>
</LinearLayout>
